Update .gitignore and modify xcschememanagement.plist for user-specific settings
- Added user-specific files to .gitignore to prevent them from being tracked.
- Updated xcschememanagement.plist to include a new key for suppressing buildable autocreation, enhancing project configuration management.
- Noted changes in UserInterfaceState.xcuserstate, indicating a binary file update.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 build/
+FactoryForge.xcodeproj/xcshareddata/xcschemes/FactoryForge.xcscheme
+FactoryForge.xcodeproj/xcuserdata/rah.xcuserdatad/xcschemes/xcschememanagement.plist
+FactoryForge.xcodeproj/project.xcworkspace/xcuserdata/rah.xcuserdatad/UserInterfaceState.xcuserstate
